--- a/app/home.html
+++ b/app/home.html
@@ -49,6 +49,9 @@
                             <img src="./img/arrow-r-m.svg" alt="">
                         </div>
                         <p>послуги</p>
+                        <div class="arrow-ic">
+                            <img src="./img/arrow-r-m.svg" alt="">
+                        </div>
                     </a>
                     <h2 class="sub-title">Послуги</h2>
 
@@ -168,6 +171,9 @@
                                     <img src="./img/arrow-r-m.svg" alt="">
                                 </div>
                                 <p>замовити консультацію</p>
+                                <div class="arrow-ic">
+                                    <img src="./img/arrow-r-m.svg" alt="">
+                                </div>
                             </a>
                         </div>
 
@@ -251,6 +257,9 @@
                                         <img src="./img/arrow-r-m.svg" alt="">
                                     </div>
                                     <p>записатись онлайн</p>
+                                    <div class="arrow-ic">
+                                        <img src="./img/arrow-r-m.svg" alt="">
+                                    </div>
                                 </a>
                             </div>
                         </div>
@@ -273,6 +282,9 @@
                                     <img src="./img/arrow-r-m.svg" alt="">
                                 </div>
                                 <p>всі наші новини</p>
+                                <div class="arrow-ic">
+                                    <img src="./img/arrow-r-m.svg" alt="">
+                                </div>
                             </a>
                         </div>
                     </div>
@@ -280,7 +292,7 @@
                 </div>
                 <div class="news-right">
                     <div class="news-cont">
-                        <a href="" class="single-news">
+                        <a href="" class="single-news rellax-h" data-rellax-speed="-0.3" data-rellax-desktop-speed="-1.5">
                             <div class="single-news__wrap">
                                 <div class="img">
                                     <img src="./img/nw1.jpg" alt="">
@@ -296,7 +308,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="" class="single-news">
+                        <a href="" class="single-news rellax-h" data-rellax-speed="-0.3" data-rellax-desktop-speed="1.5">
                             <div class="single-news__wrap">
                                 <div class="img">
                                     <img src="./img/nw2.jpg" alt="">
@@ -312,7 +324,7 @@
                                 </div>
                             </div>
                         </a>
-                        <a href="" class="single-news">
+                        <a href="" class="single-news rellax-h" data-rellax-speed="-0.3" data-rellax-desktop-speed="1.5">
                             <div class="single-news__wrap">
                                 <div class="img">
                                     <img src="./img/nw3.jpg" alt="">
